# slatedb

./: .gitignore  .gitmodules  .typos.toml  0027-decoupled-object-store-cache.md  CLEAN_SLATE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile.toml  PROMPT.md  README.md  RELEASE.md  SECURITY.md  TODO.md  amey_debug_changes.patch  build.gradle  dev  flake.nix  go.mod  go.sum  insta.yaml  kv_trampoline.c  package-lock.json  rust-toolchain.toml  rustfmt.toml  settings.gradle  slate.go  slate_test.go  slatedb.h
bindings/c/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
bindings/c/examples/: config.json  in_memory.c  s3.c
bindings/c/include/: slatedb.h
bindings/c/src/: config.rs  error.rs  lib.rs
bindings/ffi/: Cargo.toml  uniffi.toml
bindings/ffi/src/: builder.rs  config.rs  db.rs  db_reader.rs  db_snapshot.rs  error.rs  iterator.rs  lib.rs  logging.rs  merge_operator.rs  object_store.rs  settings.rs  tests.rs  transaction.rs  types.rs  validation.rs  wal.rs  write_batch.rs
bindings/python/: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
bindings/python/docs/: conf.py  index.rst  requirements.txt
bindings/python/slatedb/: __init__.py
bindings/python/tests/: conftest.py  test_admin.py  test_db.py  test_logging.py  test_metrics.py  test_reader.py  test_wal_reader.py
bindings/uniffi/: Cargo.toml  uniffi.toml
bindings/uniffi/src/: admin.rs  builder.rs  clone_builder.rs  config.rs  db.rs  db_cache.rs  db_reader.rs  db_snapshot.rs  db_transaction.rs  error.rs  filter_policy.rs  iterator.rs  lib.rs  logging.rs  merge_operator.rs  metrics.rs  object_store.rs  runtime.rs  settings.rs  sst_format.rs  types.rs  validation.rs  wal.rs  wal_reader.rs  write_batch.rs
cli/: Cargo.toml
cli/src/: main.rs
examples/: Cargo.toml  README.md
examples/.cargo/: config.toml
examples/src/: azure_blob_storage.rs  change_data_capture.rs  create_checkpoint.rs  create_snapshot.rs  db_without_compactor.rs  delete_checkpoint.rs  full_example.rs  google_cloud_storage.rs  range_reads.rs  range_scans.rs  refresh_checkpoint.rs  s3_compatible.rs  scan_snapshot.rs  simple_example.rs  standalone_compactor.rs  standalone_garbage_collector.rs  tracing_subscriber.rs  validate_max_fetch_tasks.rs
slatedb/: Cargo.toml  build.rs  clippy.toml  pr-description.md
slatedb-bencher/: Cargo.toml  README.md  SlateDb.toml  benchmark-db.sh  benchmark-transaction.sh
slatedb-bencher/src/: args.rs  db.rs  main.rs  stats.rs  system_monitor.rs  transactions.rs
slatedb-c/: Cargo.toml  README.md  STYLE_GUIDE.md  build.rs  cbindgen.toml
slatedb-c/include/: slatedb.h
slatedb-c/src/: batch.rs  builder.rs  config.rs  db.rs  db_reader.rs  error.rs  ffi.rs  iterator.rs  lib.rs  logging.rs  memory.rs  merge_operator.rs  object_store.rs  settings.rs  wal_reader.rs  write_batch.rs
slatedb-c/tests/: builder.rs  common.rs  db.rs
slatedb-c/tests/common/: mod.rs
slatedb-cli/: Cargo.toml  README.md
slatedb-cli/src/: args.rs  data.rs  main.rs  scan.rs
slatedb-cli/tests/: scan.rs
slatedb-common/: Cargo.toml  README.md
slatedb-common/src/: clock.rs  lib.rs  metrics.rs  object_metadata.rs  rand.rs  system_monitor.rs  system_parameters.rs  utils.rs
slatedb-dst/: Cargo.toml  README.md
slatedb-dst/.cargo/: config.toml
slatedb-dst/src/: clocked_object_store.rs  deterministic_local_filesystem.rs  dst.rs  error.rs  failing_object_store.rs  harness.rs  history.rs  lib.rs  object_store.rs  prefix_extractor.rs  rescaling.rs  runner.rs  scenarios.rs  state.rs  utils.rs
slatedb-dst/src/actors/: clock.rs  compactor.rs  deleter.rs  fencer.rs  flusher.rs  mod.rs  shutdown.rs  suppress_errors.rs  workload.rs  writer.rs
slatedb-dst/tests/: bank.rs  determinism.rs  rescaling.rs  segments.rs  simulation.rs
slatedb-dst/tests/simulation/: scenarios.rs
slatedb-go/: Cargo.toml  README.md  build.rs  cbindgen.toml
slatedb-go/go/: batch.go  batch_test.go  cgo_flags.go  config.go  config_test.go  db.go  db_reader.go  db_reader_test.go  db_test.go  errors.go  errors_test.go  go.mod  go.sum  helpers_test.go  iterator.go  iterator_test.go  logging.go  slatedb.h  suite_test.go  wal_reader.go  wal_reader_test.go
slatedb-go/src/: batch.rs  config.rs  db.rs  db_reader.rs  error.rs  iterator.rs  lib.rs  memory.rs  object_store.rs  types.rs
slatedb-py/: .readthedocs.yaml  Cargo.toml  README.md  pyproject.toml
slatedb-py/.cargo/: config.toml
slatedb-py/docs/: conf.py
slatedb-py/python/slatedb/: __init__.py  slatedb.pyi
slatedb-py/src/: lib.rs
slatedb-py/tests/: conftest.py  test_admin.py  test_async_operations.py  test_basic_operations.py  test_db.py  test_db_reader.py  test_db_reader_operations.py  test_row.py
slatedb-tracing/: Cargo.toml
slatedb-tracing/src/: lib.rs
slatedb-tracing/tests/: bloom_filter_span.rs  cached_field.rs  merge_span.rs  point_lookup_sources.rs
slatedb-txn-obj/: Cargo.toml  README.md  clippy.toml
slatedb-txn-obj/src/: lib.rs  object_store.rs
slatedb-txn-obj/src/transactional_object/: mod.rs  (+1 more)
slatedb/benches/: block_iterator_v2.rs  db_operations.rs  db_transaction.rs  scan_prefix_bench.rs  skipmap_comparison.rs  sst_index.rs  write_batch.rs
slatedb/examples/: simple_example.rs  tracing_subscriber.rs
slatedb/src/: active_seq_tracker.rs  admin.rs  batch.rs  batch_write.rs  blob.rs  block.rs  block_cache_policy.rs  block_iterator.rs  block_iterator_v2.rs  buffer_manager.rs  byte_buffer_manager.rs  bytes_generator.rs  bytes_range.rs  checkpoint.rs  clock.rs  clone.rs  compaction_execute_bench.rs  compaction_filter.rs  compaction_filter_iterator.rs  compaction_worker.rs  compactions_store.rs  compactor.rs  compactor_executor.rs  compactor_state.rs  compactor_state_protocols.rs  comparable_range.rs  config.rs  db.rs  db_cache_manager.rs  db_common.rs  db_context.rs  db_iter.rs  db_memtable.rs  db_metadata.rs  db_metrics.rs  db_read.rs  db_reader.rs  db_snapshot.rs  db_state.rs  db_stats.rs  (+69 more)
slatedb/tests/: configurable_block_size.rs  db.rs  dst.rs  multi_get.rs  prefix_filter.rs  transactions.rs  wal_reader.rs
(+1037 files in other folders)
