[workspace]
resolver = "2"
members = [
    "slatedb",
    "slatedb-bencher",
    "slatedb-cli",
    "slatedb-py",
]

[workspace.package]
version = "0.6.1"
edition = "2021"
repository = "https://github.com/slatedb/slatedb"
license = "Apache-2.0"
homepage = "https://slatedb.io"
readme = "README.md"

[profile.bench]
lto = true

[workspace.dependencies]
slatedb = { path = "slatedb" }