[workspace]
resolver = "2"
members = [
    "slatedb",
    "slatedb-bencher",
    "slatedb-cli",
    "slatedb-dst",
    "slatedb-py",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
repository = "https://github.com/slatedb/slatedb"
license = "Apache-2.0"
homepage = "https://slatedb.io"
readme = "README.md"

[profile.bench]
lto = true

[workspace.dependencies]

# dependencies
anyhow = "1.0.98"
async-trait = "0.1.82"
atomic = "0.6.0"
bitflags = "2.6.0"
bytemuck = "1.18.0"
bytes = "1.7.1"
chrono = "0.4.38"
clap = "4.5"
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
crossbeam-skiplist = "0.1.3"
dotenvy = "0.15.7"
duration-str = { version = "0.11.2", default-features = false }
fail-parallel = "0.5.1"
figment = "0.10.19"
flate2 = "1.0.33"
flatbuffers = "24.3.25"
foyer = "0.17.4"
futures = "0.3.30"
humantime = "2.1.0"
log = "0.4.22"
lz4_flex = "0.11.3"
moka = "0.12.8"
object_store = "0.12.2"
object_store_opendal = "0.52.1"
opendal = { version = "0.53.3", default-features = false }
once_cell = "1.19.0"
ouroboros = "0.18"
parking_lot = "0.12.3"
pyo3 = "0.25.1"
pyo3-async-runtimes = "0.25.0"
radix_trie = "0.2.1"
rand = "0.9.1"
rand_xorshift = "0.4.0"
rand_xoshiro = "0.7.0"
serde = "1.0"
serde_json = "1.0"
siphasher = "1"
slatedb = { path = "slatedb", version = "0.7.0" }
snap = "1.1.1"
sysinfo = "0.35.2"
thiserror = "1.0.63"
tokio = "1.40.0"
tokio-util = { version = "0.7.15", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3" }
thread_local = "1.1.8"
ulid = "1.2.1"
uuid = "1.17.0"
walkdir = "2.3.3"
zstd = "0.13.2"

# dev dependencies
bincode = "1"
criterion = "0.5.1"
ctor = "0.4.2"
filetime = "0.2"
insta = "1.39.0"
pprof = "0.14.0"
proptest = "1.7.0"
rstest = "0.23.0"
tempfile = "3.3"
tokio-test = "0.4.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(dst)', 'cfg(tokio_unstable)'] }
