[workspace]
resolver = "2"
members = [
    "examples",
    "slatedb",
    "slatedb-bencher",
    "slatedb-cli",
    "slatedb-dst",
    "slatedb-go",
    "slatedb-py",
]

[workspace.package]
version = "0.8.2"
edition = "2021"
repository = "https://github.com/slatedb/slatedb"
license = "Apache-2.0"
homepage = "https://slatedb.io"
readme = "README.md"

[profile.bench]
lto = true

[workspace.dependencies]

# dependencies
anyhow = "1.0.99"
async-trait = "0.1.82"
atomic = "0.6.1"
backon = "1.5.2"
bitflags = "2.9.1"
bytemuck = "1.23.2"
bytes = "1.7.1"
chrono = "0.4.41"
clap = "4.5.44"
crc32fast = "1.5.0"
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1.3"
dotenvy = "0.15.7"
duration-str = { version = "0.11.2", default-features = false }
fail-parallel = "0.5.1"
figment = "0.10.19"
flate2 = "1.1.2"
flatbuffers = "25.2.10"
foyer = "0.18.0"
futures = "0.3.30"
humantime = "2.1.0"
im = "15.1.0"
log = "0.4.27"
lz4_flex = "0.11.5"
moka = "0.12.8"
object_store = "0.12.3"
object_store_opendal = "0.54.0"
opendal = { version = "0.54.0", default-features = false }
once_cell = "1.21.3"
ouroboros = "0.18"
parking_lot = "0.12.4"
pyo3 = "0.25.1"
pyo3-async-runtimes = "0.25.0"
radix_trie = "0.3.0"
rand = "0.9.2"
rand_xorshift = "0.4.0"
rand_xoshiro = "0.7.0"
serde = "1.0"
serde_json = "1.0.142"
siphasher = "1"
slatedb = { path = "slatedb", version = "0.8.2" }
snap = "1.1.1"
sysinfo = "0.35.2"
thiserror = "1.0.63"
tokio = "1.47.1"
tokio-util = { version = "0.7.16", default-features = false }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3" }
thread_local = "1.1.9"
ulid = "1.2.1"
uuid = "1.18.0"
walkdir = "2.3.3"
zstd = "0.13.2"

# dev dependencies
bincode = "1"
criterion = "0.5.1"
ctor = "0.5.0"
filetime = "0.2"
insta = "1.39.0"
pprof = "0.14.0"
proptest = "1.7.0"
rstest = "0.26.1"
tempfile = "3.20.0"
tokio-test = "0.4.4"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    # Enables deterministic simulation tests in slatedb-dst
    'cfg(dst)',
    # Enables slow tests
    'cfg(slow)',
    # Enables tokio unstable features, which are required for DST
    # (see slatedb-dst/src/utils.rs for details)
    'cfg(tokio_unstable)'
] }
