[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
slatedb = { path = "../"}
clap = { version = "4.1", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
bytes = "1.4"
object_store = "0.11.0"
rustyline = "14.0.0"
shell-words = "1.0"