[package]
name = "slatedb-c"
description = "C FFI bindings for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb_c"
crate-type = ["cdylib", "staticlib"]
doc = false
bench = false

[dependencies]
slatedb = { workspace = true, features = ["all"] }
tokio = { workspace = true, features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "signal"] }
log = { workspace = true }
env_logger = "0.11"
uuid = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cbindgen = "0.27"

[lints]
workspace = true
