[package]
name = "slatedb-c"
description = "C FFI bindings for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb_c"
crate-type = ["cdylib", "staticlib", "rlib"]
doc = false
bench = false

[dependencies]
log = { workspace = true }
slatedb = { workspace = true, features = ["all"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[build-dependencies]
cbindgen = "0.27"

[lints]
workspace = true
