[package]
name = "slatedb-go"
description = "Go FFI bindings for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb_go"
crate-type = ["cdylib", "staticlib"]
doc = false
bench = false

[dependencies]
slatedb = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
tokio = { workspace = true, features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "signal"] }
once_cell = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cbindgen = "0.27"
