[package]
name = "slatedb-py"
description = "A Python binding for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb"
crate-type = ["cdylib"]
doc = false

[dependencies]
# See .cargo/config.toml for details on why pyo3/extension-module is only
# enabled on non-macOS and non-iOS targets.
pyo3 = { version = "0.25.1" }
pyo3-async-runtimes = { version = "0.25.0", features = ["tokio-runtime"] }
slatedb = { path = "../slatedb" }
once_cell = "1.19"
tokio = { version = "1.40.0", features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "signal"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }