[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "slatedb"
description = "A cloud native embedded storage engine built on object storage."
version = "0.9.2"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25.0",
]
docs = [
    "sphinx>=7.4",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autoapi>=3.0",
]
lint = [
    "ruff>=0.14.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "slatedb"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short" 

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
    ".venv",
    "target",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["slatedb"]

[tool.ruff.lint.per-file-ignores]
"python/slatedb/__init__.py" = ["F401", "F403"]
"tests/**" = ["SIM105", "B017"]
"python/slatedb/slatedb.pyi" = ["E501"]
