[package]
name = "slatedb"
description = "A cloud native embedded storage engine built on object storage."
readme = "../README.md"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1.82"
atomic = "0.6.0"
bitflags = "2.6.0"
bytemuck = "1.18.0"
bytes = { version = "1.7.1", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
crossbeam-skiplist = "0.1.3"
dotenvy = { version = "0.15.7" }
duration-str = { version = "0.11.2", features = ["serde", "time"], default-features = false }
fail-parallel = "0.5.1"
figment = { version = "0.10.19", features = ["env", "json", "toml", "yaml"] }
flate2 = { version = "1.0.33", optional = true }
flatbuffers = "24.3.25"
foyer = { version = "0.17.3", features = ["serde"], optional = true }
futures = "0.3.30"
log = { version = "0.4.22", features = ["std"] }
lz4_flex = { version = "0.11.3", optional = true }
moka = { version = "0.12.8", features = ["future"], optional = true }
object_store = "0.12.0"
once_cell = "1.19.0"
ouroboros = "0.18"
parking_lot = "0.12.3"
radix_trie = "0.2.1"
rand = "0.8.5"
rand_xorshift = "0.3.0"
rand_xoshiro = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
siphasher = "1"
snap = { version = "1.1.1", optional = true }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["fs", "macros", "sync", "rt", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.40", features = ["log"] }
ulid = { version = "=1.1.3", features = ["serde"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
walkdir = "2.3.3"
zstd = { version = "0.13.2", optional = true }
tokio-util = { version = "0.7.15", default-features = false, features = ["rt"] }
thread_local = "1.1.8"

[dev-dependencies]
bincode = "1"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
fail-parallel = { version = "0.5.1", features = ["failpoints"] }
figment = { version = "0.10.19", features = ["test"] }
filetime = "0.2"
insta = "1.39.0"
pprof = { version = "0.14.0", features = ["criterion", "protobuf-codec"] }
proptest = "1.5.0"
rstest = "0.23.0"
tempfile = "3.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tokio-test = "0.4.4"

[features]
default = ["aws", "foyer"]
aws = ["object_store/aws"]
azure = ["object_store/azure"]
bencher = ["aws", "azure", "wal_disable", "foyer"]
compression = ["snappy"]
snappy = ["dep:snap"]
zlib = ["dep:flate2"]
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]
wal_disable = []
moka = ["dep:moka"]
foyer = ["dep:foyer"]

[lib]
# Disable `libtest` harness because it fights with Criterion's `--output-format bencher`
# See https://bheisler.github.io/criterion.rs/book/faq.html
bench = false

[[bench]]
name = "db_operations"
harness = false
