[package]
name = "slatedb-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.26.0"

[dependencies]
slatedb = { version = ">=0", path = "../.."}
object_store = "0.11.0"
tokio = { version = "1.40.0", features = ["sync", "rt", "rt-multi-thread"] }
