[package]
name = "slatedb-ffi"
description = "UniFFI bindings for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb_ffi"
crate-type = ["cdylib", "rlib"]
doc = false
bench = false

[dependencies]
slatedb = { workspace = true, features = ["all"] }
slatedb-c = { path = "../../slatedb-c" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
uniffi = { workspace = true, features = ["tokio"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
