[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slatedb"
version = "0.11.1"
description = "Low-level UniFFI Python bindings for SlateDB."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
lint = [
    "ruff>=0.14.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"slatedb.ffi" = ["*.so", "*.dylib", "*.dll"]

[tool.ruff]
target-version = "py310"
line-length = 100
