[package]
name = "slatedb-uniffi"
description = "UniFFI bindings for SlateDB"
publish = false
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
name = "slatedb_uniffi"
crate-type = ["cdylib"]
doc = false
bench = false

[dependencies]
chrono = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
slatedb = { workspace = true, features = ["all"] }
slatedb-common = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
ulid = { workspace = true }
uniffi = { workspace = true, features = ["tokio"] }
uuid = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }

[lints]
workspace = true
